--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 AdMobsId="ca-app-pub-8586985229076006~5227476725"
+android.enableJetifier=true
+android.useAndroidX=true
