--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,14 +47,22 @@ dependencies {
 
     //Support Library Implementations
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
 
     //Google Services
-    implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    implementation 'com.google.android.gms:play-services-ads:17.2.1'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+    //Dagger 2
+    // Note: Using version 2.19 due to a dagger not resolving dependencies
+    // correctly in version 2.20+ with gradle 3.2.* .
+    implementation 'com.google.dagger:dagger-android:2.19'
+    implementation 'com.google.dagger:dagger-android-support:2.19'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.19'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 
     //Butter Knife
     implementation 'com.jakewharton:butterknife:10.1.0'
@@ -66,4 +74,6 @@ dependencies {
     })
 
     testImplementation 'junit:junit:4.12'
+    implementation 'androidx.fragment:fragment:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
