Improved offline access and setting up gradle tasks.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [usesClearTextTraffic:"false"]
+        }
+        debug {
+            manifestPlaceholders = [usesClearTextTraffic:"true"]
         }
     }
     flavorDimensions "default"
