--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.google.cloud.tools:endpoints-framework-gradle-plugin:1.0.2'
