Cleaned code and added comments.

--- a/build.gradle
+++ b/build.gradle
@@ -21,25 +21,10 @@ allprojects {
     }
 }
 
-task runAppEngine (dependsOn: "backend:appengineStart") {
+task runTests(dependsOn: [":backend:appengineRun",
+                              ":app:connectedAndroidTest",
+                              ':backend:appengineStop']) {
     doLast {
-        ">>>>>>>>> AppEngine Running <<<<<<<<<<"
-    }
-}
-
-task runConnectedTests {
-    println "######## Running Tests ########"
-    shouldRunAfter 'runAppEngine'
-    dependsOn ':app:connectedAndroidTest'
-    doLast {
-        println "######## Finished Testing ########"
-    }
-}
-
-task stopAppEngine {
-    shouldRunAfter 'runConnectedTests'
-    dependsOn ':backend:appengineStop'
-    doLast {
-        println "######## Server Stopped ########"
+        println '>>>> Tests Completed <<<<<'
     }
 }
